implement api review comments
Make GET and SET APIs consistent
Encrypt username and password
Record everything, do not cap at 20 transactions
Update UI similar to wireframe

--- a/webapp/src/ionicapp/www/templates/confirmRegistration.html
+++ b/webapp/src/ionicapp/www/templates/confirmRegistration.html
@@ -15,7 +15,7 @@
       </ion-list>
       <div class="spacer" style="height: 10px;"></div>
       <button id="confirmRegistration-button16" ng-click="submit()" class="button button-dark button-block">Submit</button>
-      <button id="confirmRegistration-button45" ng-click="submitResend()" class="button button-positive button-small button-block button-clear">Did not receive the code? Resend email</button>
+      <button id="confirmRegistration-button45" ng-click="submitResend()" class="button button-positive button-small button-block button-clear">Didn't get code? Resend OTP</button>
       <button id="confirmRegistration-button17" ng-click="submitCancel()" class="button button-positive button-small button-block button-clear">Cancel</button>
     </form>
     <div id="confirmRegistration-container5" class="spinner4 creator-container"></div>
