--- a/webapp/src/ionicapp/www/templates/resetPassword.html
+++ b/webapp/src/ionicapp/www/templates/resetPassword.html
@@ -5,19 +5,15 @@
     <form id="resetPassword-form11" class="list">
       <div class="spacer" style="height: 10px;"></div>
       <div id="resetPassword-markdown47" style="text-align:center;" class="show-list-numbers-and-dots">
-        <p style="color:#000000;">Please enter your new password together with the 6-digit code sent to your email.</p>
+        <p style="color:#000000;">A 6-digit verification code has been sent to your email to reset password. </p>
       </div>
       <ion-list id="resetPassword-list6">
-        <label class="item item-input" id="resetPassword-input22" name="input-username">
-          <span class="input-label">Username</span>
-          <input type="text" placeholder="" ng-model="data.username">
-        </label>
         <label class="item item-input" id="resetPassword-input23" name="input-confirmationcode">
-          <span class="input-label">Code</span>
+          <span class="input-label">Verification Code</span>
           <input type="text" placeholder="" ng-model="data.confirmationcode">
         </label>
         <label class="item item-input" id="resetPassword-input24" name="input-password">
-          <span class="input-label">Password</span>
+          <span class="input-label">New Password</span>
           <input type="password" placeholder="" ng-model="data.password">
         </label>
         <label class="item item-input" id="resetPassword-input34" name="input-password2">
@@ -26,7 +22,7 @@
         </label>
       </ion-list>
       <div class="spacer" style="height: 10px;"></div>
-      <button id="resetPassword-button14" ng-click="submit()" class="button button-dark button-block">Submit</button>
+      <button id="resetPassword-button14" ng-click="submit()" class="button button-dark button-block">SUBMIT</button>
       <div class="spacer" style="height: 10px;"></div>
       <button id="resetPassword-button15" ng-click="submitCancel()" class="button button-positive button-small button-block button-clear">Cancel</button>
     </form>
