--- a/webapp/src/ionicapp/www/templates/recover.html
+++ b/webapp/src/ionicapp/www/templates/recover.html
@@ -1,8 +1,11 @@
 <ion-view title="Recover" hide-nav-bar="true" hide-back-button="true" cache-view="false" nav-transition="none" id="page7" class="page_width">
   <ion-content padding="true" class="manual-ios-statusbar-padding">
     <div class="spacer" style="height: 20px;"></div>
-    <h3 id="recover-heading7" style="color:#444444;text-align:center;">Recover your account</h3>
+    <h3 id="recover-heading7" style="color:#444444;text-align:center;">Forgot password</h3>
     <div class="spacer" style="height: 10px;"></div>
+    <div id="recover-markdown32" class="show-list-numbers-and-dots">
+      <p style="color:#000000;">Enter the email address you signed up with.</p>
+    </div>
     <form id="recover-form10" class="list">
       <ion-list id="recover-list5">
         <label class="item item-input" id="recover-input20" name="input-email">
@@ -11,7 +14,7 @@
         </label>
       </ion-list>
       <div class="spacer" style="height: 10px;"></div>
-      <button id="recover-button11" ng-click="submit()" class="button button-dark button-block">Submit</button>
+      <button id="recover-button11" ng-click="submit()" class="button button-dark button-block">RESET PASSWORD</button>
       <div class="spacer" style="height: 10px;"></div>
       <button id="recover-button12" ng-click="submitCancel()" class="button button-positive button-small button-block button-clear">Cancel</button>
     </form>
