--- a/webapp/src/ionicapp/www/templates/login.html
+++ b/webapp/src/ionicapp/www/templates/login.html
@@ -6,7 +6,7 @@
     <form id="login-form8" class="list">
       <ion-list id="login-list3">
         <label class="item item-input" id="login-input13" name="input-username">
-          <span class="input-label">Username</span>
+          <span class="input-label">Email</span>
           <input type="text" placeholder="" ng-model="data.username">
         </label>
         <label class="item item-input" id="login-input14" name="input-password">
