--- a/webapp/src/ionicapp/www/templates/signup.html
+++ b/webapp/src/ionicapp/www/templates/signup.html
@@ -9,6 +9,10 @@
           <span class="input-label">Name</span>
           <input type="text" placeholder="" ng-model="data.name">
         </label>
+        <label class="item item-input" id="signup-input55" name="input-number">
+          <span class="input-label">Mobile Number</span>
+          <input type="tel" placeholder="" ng-model="data.phonenumber">
+        </label>
         <label class="item item-input" id="signup-input17" name="input-email">
           <span class="input-label">Email</span>
           <input type="email" placeholder="" ng-model="data.email">
@@ -23,14 +27,13 @@
         </label>
       </ion-list>
       <button id="signup-button7" ng-click="submit()" class="button button-dark button-block">SIGN UP</button>
-      <div class="spacer" style="width: 300px; height: 30px;"></div>
       <div id="signup-markdown31" style="text-align:center;" class="show-list-numbers-and-dots">
         <p style="color:#BBBBBB;font-size:12px;">By signing up for an account, you are agreeing with our
           <strong>Terms and Conditions</strong> and
           <strong>Privacy Policy</strong>
         </p>
       </div>
-      <div class="spacer" style="width: 300px; height: 53px;"></div>
+      <div class="spacer" style="width: 300px; height: 35px;"></div>
       <a ui-sref="login()" id="signup-button9" class="button button-dark button-block button-clear">Already have an account? Sign In</a>
       <div id="signup-container4" class="spinner3 creator-container"></div>
     </form>
