--- a/webapp/src/ionicapp/www/templates/account.html
+++ b/webapp/src/ionicapp/www/templates/account.html
@@ -20,8 +20,9 @@
       </label>
       <label class="item item-input item-floating-label" id="account-input54">
         <span class="input-label">Mobile Number</span>
-        <input type="text" placeholder="" readonly="" ng-model="data.mobile">
+        <input type="text" placeholder="" readonly="" ng-model="data.phonenumber">
       </label>
+      <button id="account-button33" ng-click="submitDeleteaccount()" class="button button-assertive button-block">Delete account</button>
     </form>
     <form id="account-form19" class="list" ng-show="data.activeSection==2">
       <label class="item item-input" id="account-input48">
@@ -32,7 +33,7 @@
         <span class="input-label">Credits</span>
         <input type="text" placeholder="" readonly="" ng-model="data.subscription_credits">
       </label>
-      <button id="account-button33" ng-click="submitBuycredits()" class="button button-dark button-block">Buy credits</button>
+      <button id="account-button10" ng-click="submitBuycredits()" class="button button-dark button-block">Buy credits</button>
     </form>
     <form id="account-form15" class="list" ng-show="data.activeSection==2">
       <button id="account-button53" ng-click="" class="button button-stable button-block">View credit purchases</button>
