--- a/webapp/src/ionicapp/www/templates/devices.html
+++ b/webapp/src/ionicapp/www/templates/devices.html
@@ -4,29 +4,24 @@
   </ion-nav-buttons>
   <ion-content padding="true" class="has-header">
     <div class="spacer" style="width: 300px; height: 12px;"></div>
-    <ion-list id="devices-list9">
-      <ion-item class="item-icon-left dark" id="devices-list-item20" ng-repeat="device in devices" ng-click="submitTest(device.devicename)">
-        <i class="icon ion-ionic"></i>{{ device.devicename }}
-        <ion-option-button class="button-assertive" ng-click="submitDelete(device)">delete</ion-option-button>
-        <ion-option-button class="button-positive" ng-click="submitView(device)">view</ion-option-button>
-      </ion-item>
+    <ion-list id="devices-list10">
+      <div class="item item-body" id="devices-list-item-container4" ng-repeat="device in devices" ng-click="submitTest(device.devicename)" ng-disabled="device.devicestatus==&quot;Detecting...&quot;">
+        <div id="devices-markdown34" ng-disabled="device.devicestatus==&quot;Detecting...&quot;" class="show-list-numbers-and-dots">
+          <p style="margin-top:0px;color:#444444;font-size:18px;">
+            <strong>{{ device.devicename }}</strong>
+          </p>
+        </div>
+        <div id="devices-markdown63" ng-disabled="device.devicestatus==&quot;Detecting...&quot;" class="show-list-numbers-and-dots">
+          <p style="margin-top:0px;color:#444444;font-size:10px;">UUID: {{ device.deviceid }}</p>
+        </div>
+        <div id="devices-markdown62" ng-disabled="device.devicestatus==&quot;Detecting...&quot;" class="show-list-numbers-and-dots">
+          <hr>
+        </div>
+        <div id="devices-markdown64" ng-disabled="device.devicestatus==&quot;Detecting...&quot;" ng-class="getStyle(device.devicestatus)" class="show-list-numbers-and-dots">
+          <p style="margin-top:0px;color:#444444;font-size:10px;"> {{ device.devicestatus }}</p>
+        </div>
+      </div>
     </ion-list>
     <button id="devices-button24" ng-click="submitRefresh()" class="button button-dark button-block">Refresh</button>
-    <form id="devices-form24" class="list">
-      <ion-toggle toggle-class="toggle-dark" id="devices-toggle10" ng-model="showHelp">Help</ion-toggle>
-    </form>
-    <div id="devices-markdown30" ng-show="showHelp" style="text-align:center;" class="show-list-numbers-and-dots">
-      <p style="color:#444444;">To
-        <strong>add device</strong>, click on the + button at the top right corner.</p>
-    </div>
-    <div id="devices-markdown59" ng-show="showHelp" style="text-align:center;" class="show-list-numbers-and-dots">
-      <p style="color:#444444;">To
-        <strong>control device</strong>, click on the device.</p>
-    </div>
-    <div id="devices-markdown48" ng-show="showHelp" style="text-align:center;" class="show-list-numbers-and-dots">
-      <p style="color:#444444;">To
-        <strong>view device</strong> information or
-        <strong>delete device</strong>, swipe the device.</p>
-    </div>
   </ion-content>
 </ion-view>
