implement new requirements
Add device using UUID and serial number
Update retrieving of device info
Add API for requesting verification of mobile number
Add API for confirming verification of mobile number
Update documentation and web app

--- a/webapp/src/ionicapp/SCSS/ionic.app.scss
+++ b/webapp/src/ionicapp/SCSS/ionic.app.scss
@@ -126,15 +126,18 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 .item-online {
 	color: green;
 	background-color: green;
+	width: 60px;
 }
 
 .item-offline {
 	color: red;
 	background-color: red;
+	width: 60px;
 }
 
 .item-detecting {
 	color: black;
 	background-color: yellow;
+	width: 60px;
 }
 
