--- a/webapp/src/ionicapp/www/templates/devices.html
+++ b/webapp/src/ionicapp/www/templates/devices.html
@@ -5,7 +5,7 @@
   <ion-content padding="true" class="has-header">
     <div class="spacer" style="width: 300px; height: 12px;"></div>
     <ion-list id="devices-list10">
-      <div class="item item-body" id="devices-list-item-container4" ng-repeat="device in devices" ng-click="submitTest(device.devicename)" ng-disabled="device.devicestatus==&quot;Detecting...&quot;">
+      <div class="item item-body" id="devices-list-item-container4" ng-repeat="device in devices" ng-click="submitTest(device)" ng-disabled="device.devicestatus==&quot;Detecting...&quot;">
         <div id="devices-markdown34" ng-disabled="device.devicestatus==&quot;Detecting...&quot;" class="show-list-numbers-and-dots">
           <p style="margin-top:0px;color:#444444;font-size:18px;">
             <strong>{{ device.devicename }}</strong>
