--- a/webapp/src/ionicapp/www/templates/signup.html
+++ b/webapp/src/ionicapp/www/templates/signup.html
@@ -11,7 +11,7 @@
         </label>
         <label class="item item-input" id="signup-input55" name="input-number">
           <span class="input-label">Mobile Number</span>
-          <input type="tel" placeholder="" ng-model="data.phonenumber">
+          <input type="tel" placeholder="Optional" ng-model="data.phonenumber">
         </label>
         <label class="item item-input" id="signup-input17" name="input-email">
           <span class="input-label">Email</span>
@@ -19,11 +19,11 @@
         </label>
         <label class="item item-input" id="signup-input16" name="input-password">
           <span class="input-label">Password</span>
-          <input type="password" placeholder="" ng-model="data.password">
+          <input type="password" placeholder="Min 6 chars" ng-model="data.password">
         </label>
         <label class="item item-input" id="signup-input33" name="input-password2">
           <span class="input-label">Confirm Password</span>
-          <input type="password" placeholder="" ng-model="data.password2">
+          <input type="password" placeholder="Min 6 chars" ng-model="data.password2">
         </label>
       </ion-list>
       <button id="signup-button7" ng-click="submit()" class="button button-dark button-block">SIGN UP</button>
