--- a/webapp/src/ionicapp/www/templates/account.html
+++ b/webapp/src/ionicapp/www/templates/account.html
@@ -1,10 +1,8 @@
 <ion-view title="Account" hide-back-button="true" nav-transition="none" id="page3" class="page_width">
+  <ion-nav-buttons side="right" class="has-header">
+    <button class="button button-assertive icon ion-trash-b" ng-click="submitDeleteaccount()"></button>
+  </ion-nav-buttons>
   <ion-content padding="true" class="has-header">
-    <div id="account-markdown35" style="text-align:center;" class="show-list-numbers-and-dots">
-      <p style="color:#444444;font-size:20px;">
-        <strong> {{ data.username }} </strong>
-      </p>
-    </div>
     <div id="account-button-bar2" class="button-bar">
       <button id="account-button50" ng-class="{'active': data.activeSection==1}" ng-click="changeSection(1)" class="button button-dark button-block">Profile</button>
       <button id="account-button51" ng-class="{'active': data.activeSection==2}" ng-click="changeSection(2)" class="button button-dark button-block">Subscription</button>
@@ -12,7 +10,7 @@
     <form id="account-form16" class="list" ng-show="data.activeSection==1">
       <label class="item item-input item-floating-label" id="account-input43">
         <span class="input-label">Name</span>
-        <input type="text" placeholder="" readonly="" ng-model="data.fullname">
+        <input type="text" placeholder="" ng-model="data.fullname">
       </label>
       <label class="item item-input item-floating-label" id="account-input44">
         <span class="input-label">Email</span>
@@ -20,10 +18,11 @@
       </label>
       <label class="item item-input item-floating-label" id="account-input54">
         <span class="input-label">Mobile Number</span>
-        <input type="text" placeholder="" readonly="" ng-model="data.phonenumber">
+        <input type="text" placeholder="" ng-model="data.phonenumber">
       </label>
       <button id="account-button19" ng-click="submitVerifynumber()" ng-show="data.phonenumber.includes(&quot;Unverified&quot;)" class="button button-dark button-block">Verify mobile number</button>
-      <button id="account-button33" ng-click="submitDeleteaccount()" class="button button-assertive button-block">Delete account</button>
+      <button id="account-button42" ng-click="submitSavechanges()" class="button button-positive button-block">Save changes</button>
+      <button id="account-button39" ng-click="submitChangepassword()" class="button button-dark button-block">Change password</button>
     </form>
     <form id="account-form19" class="list" ng-show="data.activeSection==2">
       <label class="item item-input" id="account-input48">
