--- a/webapp/src/ionicapp/www/templates/menu.html
+++ b/webapp/src/ionicapp/www/templates/menu.html
@@ -17,11 +17,11 @@
         </p>
       </div>
       <ion-list id="menu-list1" class="manual-list-fullwidth">
-        <ion-item class="item-icon-left dark" id="menu-list-item2" ui-sref="menu.account({})" menu-close="">
+        <ion-item class="item-icon-left dark" id="menu-list-item2" ui-sref="menu.account({&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;})" menu-close="">
           <i class="icon ion-person"></i>Account</ion-item>
         <ion-item class="item-icon-left dark" id="menu-list-item1" ui-sref="menu.devices({&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;})" menu-close="">
           <i class="icon ion-ios-keypad"></i>Devices</ion-item>
-        <ion-item class="item-icon-left dark" id="menu-list-item18" ui-sref="menu.history()" menu-close="">
+        <ion-item class="item-icon-left dark" id="menu-list-item18" ui-sref="menu.history({&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;})" menu-close="">
           <i class="icon ion-android-clipboard"></i>History</ion-item>
         <ion-item class="item-icon-left dark" id="menu-list-item4" ui-sref="menu.settings()" menu-close="">
           <i class="icon ion-settings"></i>Settings</ion-item>
