Support get and set UART properties

--- a/webapp/src/ionicapp/www/templates/configureDevice.html
+++ b/webapp/src/ionicapp/www/templates/configureDevice.html
@@ -25,11 +25,10 @@
       <hr>
     </div>
     <div class="spacer" style="width: 300px; height: 5px;"></div>
-    <button id="configureDevice-button20" ng-click="submitUART()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" style="font-size:18px;" class="button button-dark button-large button-outline widget_button">UART1</button>
-    <button id="configureDevice-button23" ng-click="submitUART()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" style="font-size:18px;" class="button button-dark button-large button-outline widget_button">UART2</button>
-    <div class="spacer" style="height: 5px;"></div>
-    <button id="configureDevice-button18" ng-click="submitGPIO()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" style="font-size:18px;" class="button button-dark button-large button-outline widget_button">I2C</button>
+    <button id="configureDevice-button20" ng-click="submitUART()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" style="font-size:18px;" class="button button-dark button-large button-outline widget_button">UART</button>
     <button id="configureDevice-button52" ng-click="submitGPIO()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" style="font-size:18px;" class="button button-dark button-large button-outline widget_button">GPIO</button>
+    <div class="spacer" style="height: 10px;"></div>
+    <button id="configureDevice-button18" ng-click="submitGPIO()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" style="font-size:18px;" class="button button-dark button-large button-outline widget_button">I2C</button>
     <div class="spacer" style="height: 5px;"></div>
     <button id="configureDevice-button47" ng-click="submitRestart()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" class="button button-dark button-block">RESTART DEVICE</button>
     <div class="spacer" style="width: 300px; height: 58.9931px;"></div>
