--- a/webapp/src/ionicapp/www/templates/configureDevice.html
+++ b/webapp/src/ionicapp/www/templates/configureDevice.html
@@ -3,10 +3,9 @@
     <button class="button button-icon icon ion-android-close" ng-click="submitDeviceList()"></button>
   </ion-nav-buttons>
   <ion-nav-buttons side="right" class="has-header">
-    <button class="button button-icon icon ion-social-rss" ng-click="submitStatus()"></button>
+    <button class="button button-icon icon ion-social-rss" ng-click="submitGetStatus()"></button>
   </ion-nav-buttons>
   <ion-content padding="true" class="has-header">
-    <div class="spacer" style="width: 300px; height: 10px;"></div>
     <div id="configureDevice-markdown19" ng-click="submitView()" style="text-align:center;" class="show-list-numbers-and-dots">
       <p style="color:#444444;font-size:18px;">
         <strong> {{ data.devicename }} </strong>
@@ -24,14 +23,18 @@
     <div id="configureDevice-markdown33" class="show-list-numbers-and-dots">
       <hr>
     </div>
-    <div class="spacer" style="width: 300px; height: 5px;"></div>
     <button id="configureDevice-button20" ng-click="submitUART()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" style="font-size:18px;" class="button button-dark button-large button-outline widget_button">UART</button>
     <button id="configureDevice-button52" ng-click="submitGPIO()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" style="font-size:18px;" class="button button-dark button-large button-outline widget_button">GPIO</button>
-    <div class="spacer" style="height: 10px;"></div>
     <button id="configureDevice-button18" ng-click="submitGPIO()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" style="font-size:18px;" class="button button-dark button-large button-outline widget_button">I2C</button>
-    <div class="spacer" style="height: 5px;"></div>
-    <button id="configureDevice-button47" ng-click="submitRestart()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" class="button button-dark button-block">RESTART DEVICE</button>
-    <div class="spacer" style="width: 300px; height: 58.9931px;"></div>
+    <div id="configureDevice-markdown16" class="show-list-numbers-and-dots">
+      <hr>
+    </div>
+    <button id="configureDevice-button47" ng-click="submitSetStatus(&quot;restart&quot;)" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" class="button button-positive button-block">RESTART DEVICE</button>
+    <button id="configureDevice-button30" ng-click="submitSetStatus(&quot;start&quot;)" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" class="button button-balanced widget_button">START DEVICE</button>
+    <button id="configureDevice-button23" ng-click="submitSetStatus(&quot;stop&quot;)" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" class="button button-assertive widget_button">STOP DEVICE</button>
+    <div id="configureDevice-markdown21" class="show-list-numbers-and-dots">
+      <hr>
+    </div>
     <button id="configureDevice-button22" ng-click="submitNotifications()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" style="font-size:14px;text-align:left;" class="button button-dark button-large button-outline icon-right ion-android-notifications widget_button">Notification</button>
     <button id="configureDevice-button21" ng-click="submitEthernet()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" style="font-size:18px;text-align:left;" class="button button-dark button-large button-outline icon-right ion-network widget_button">Ethernet</button>
     <div class="spacer" style="height: 5px;"></div>
